# simplechat

./: .env  .gitignore  .python-version  Untitled2.ipynb  kadai3.ipynb  main.py  pyproject.toml  test.py
