[project]
name = "simplechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "ipykernel>=6.29.5",
    "pygrok>=1.0.0",
    "pyngrok>=7.2.5",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
